# rq-demo

./: .editorconfig  .gitignore  Dockerfile  README.md  pyproject.toml
infrastructure/: docker-compose.yaml
rq_demo/: Dockerfile  README.md  app.py  pyproject.toml
rq_demo/rq_demo/: app.py
rq_demo/rq_demo/static/blocks/content/: content.css
rq_demo/rq_demo/static/blocks/page/: page.css
rq_demo/rq_demo/static/blocks/section/: section.css
rq_demo/rq_demo/static/blocks/section/__list/: section__list.css
rq_demo/rq_demo/static/pages/: index.css
rq_demo/rq_demo/templates/: index.html
rq_demo/static/blocks/footer/__paragraph/: footer__paragraph.css
rq_demo/templates/: index.html
rq_demo/templates/blocks/button/: button.css
rq_demo/templates/blocks/header/: header.css
rq_demo/templates/blocks/header/__title/: header__title.css
rq_demo/templates/blocks/link/: link.css
rq_demo/templates/blocks/page/: page.css
rq_demo/templates/blocks/page/__paper/: page__paper.css
rq_demo/templates/blocks/section/__title/: section__title.css
